登陆层完善

--- a/index of douyu/index.html
+++ b/index of douyu/index.html
@@ -7,7 +7,7 @@
     <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-	<div>
+	<div class="login_all">
 		<div id="login_block"></div>
 		<div id="login_area">
 			<div class='la_head'>
@@ -17,9 +17,9 @@
 			</div>
 			<div class="login_content">
 				<div class='threeways'>
-					<img src='qq.png' />
-					<img src='weixin.png' />
-					<img src='weibo.png' />
+					<a href="#"><img src='qq.png' /></a>
+					<a href="#"><img src='weixin.png' /></a>
+					<a href="#"><img src='weibo.png' /></a>
 					<p>第三方账号直接登陆</p>
 				</div>
 				<img src='or-line.png' />
@@ -140,7 +140,7 @@
 			</li>
 			<li id="download"><div class="login_img"></div><a href="">下载</a><img src="assort-icon.png"></li>
 			<li id="username"><a href="">用户名</a></li>
-			<li id="login"><div class="login_img"></div><a href="">登陆</a><a href="">|注册</a></li>
+			<li id="login"><div class="login_img"></div><a href="##">登陆</a><a href="##">|注册</a></li>
 		</ul>		
 	</div>
 	<div class="sidebar">
